# Raspberry_Remote_Dev

./: .gitignore  CMakeList.txt  CMakeLists.txt  README.md  Remote_Raspi_Python.py  Remote_ssh_Raspi_Python.py  Test.py  bazel-Raspberry_Remote_Dev  bazel-bin  bazel-out  bazel-testlogs  demo  remote_raspi_gpio.py  remote_raspi_jupiter.ipynb  remote_raspi_test  remote_raspi_test.c  remote_raspi_test.md  remote_ss_raspi_gpio.py  remote_ssh_raspi_test  remote_ssh_raspi_test.c  workspace.code-workspace
inc/: bmp180.h
lib/: BUILD.bazel  README.md  test_lib_1.c  test_lib_1.h  test_lib_2.h
main/: BUILD.bazel  bmp180.c  bmp180.h  main  main.c  main_2.c  main_2.h
src/: bmp180.c  main.c  test_lib_1.c  test_lib_2.c
test-c-prg/: BUILD.bazel  README.md  bazel-bin  bazel-out  bazel-test-c-prg  bazel-testlogs  remote_raspi_test.c  remote_rtc_test.c
test-c-prg/lib/: test_lib_1.c  test_lib_2.c  test_lib_2.h
test-c-prg/main/: main.c
test-python-prg/: remote_raspi_gpio.py
